[package]
name = "plist-tf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["env", "derive", "cargo", "wrap_help"] }
plist = "1.4.3"
seek_bufread = "1.2.2"
serde = { version = "1.0.163", features = ["derive", "rc", "alloc"] }
serde_json = { version = "1.0.96", features = ["alloc", "raw_value", "unbounded_depth", "preserve_order"] }



[lib]
name = "plist_modem"
path = "src/modem/mod.rs"

[[bin]]
name = "plist"
path = "src/cli.rs"
bench = false
