[package]
name = "plistt"
version = "0.1.1"
edition = "2021"
authors = ["Gabriel FD Moura <gabriel@poems.codes>"]
description = "plist transcoder to json"
documentation = "https://docs.rs/plistt"
readme = "README.md"
license = "MIT"
license-file = "LICENSE-MIT"

[dependencies]
clap = { version = "4.3.1", features = ["env", "derive", "cargo", "wrap_help"] }
plist = "1.4.3"
seek_bufread = "1.2.2"
serde = { version = "1.0.163", features = ["derive", "rc", "alloc"] }
serde_json = { version = "1.0.96", features = ["alloc", "raw_value", "unbounded_depth", "preserve_order"] }

[lib]
name = "plistt"
path = "src/modem/mod.rs"

[[bin]]
name = "plist"
path = "src/cli.rs"
bench = false
